--- a/.github/workflows/TestTelegramWorkflow.yml
+++ b/.github/workflows/TestTelegramWorkflow.yml
@@ -9,8 +9,8 @@ jobs:
       - name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
-          to: ${{ 277485313 }}
-          token: ${{ 5798741615:AAGZBJY8c_knlo6appl5ce-c1nv2B9LEXSY }}
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
             ${{ github.actor }} created commit:
             Commit message: ${{ github.event.commits[0].message }}
